Fixed spacing in navbar and contact us

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -142,11 +142,20 @@
 }
 
 .nav-item{
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 14px;
+  padding-right: 14px;
 }
 
 .tiruLogo{
-  width: 15%;
-  height : 15%;
+  width: 9vh;
+  height : 9vh;
+  padding: 1vh;
+}
+
+.navbar-brand{
+  padding-left: 5px !important;
+}
+
+.navbar-collapse{
+  padding-right:0px;
 }
